force-app/main/default/objects/Annual_View__c/Annual_View__c.object-meta.xml
<CustomObject>
    <label>Annual View</label>
    <nameField>
        <label>Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annual View</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>