force-app/main/default/objects/Annual_View__c/fields/Applications_Received__c.field-meta.xml
<CustomField>
    <fullName>Applications_Received__c</fullName>
    <label>Applications Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>