force-app/main/default/objects/Annual_View__c/fields/Applications_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applications_Received_Amount__c</fullName>
    <label>Applications Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>