force-app/main/default/objects/Annual_View__c/fields/Booked__c.field-meta.xml
<CustomField>
    <fullName>Booked__c</fullName>
    <label>Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>