force-app/main/default/objects/Annual_View__c/fields/Delinquency__c.field-meta.xml
<CustomField>
    <fullName>Delinquency__c</fullName>
    <label>Delinquency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>