force-app/main/default/objects/Annual_View__c/fields/Delinquency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Amount__c</fullName>
    <label>Delinquency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>