force-app/main/default/objects/Annual_View__c/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <label>Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>