force-app/main/default/objects/Annual_View__c/fields/Net_Investment__c.field-meta.xml
<CustomField>
    <fullName>Net_Investment__c</fullName>
    <label>Net Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>