force-app/main/default/objects/Annual_View__c/fields/Net_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Investment_Amount__c</fullName>
    <label>Net Investment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>