force-app/main/default/objects/Annual_View__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applications_Received__c</columns>
    <columns>Applications_Received_Amount__c</columns>
    <columns>Approved__c</columns>
    <columns>Approved_Amount__c</columns>
    <columns>Booked__c</columns>
    <columns>Booked_Amount__c</columns>
    <columns>Funding__c</columns>
    <columns>Funding_Amount__c</columns>
    <columns>Net_Investment__c</columns>
    <columns>Net_Investment_Amount__c</columns>
    <columns>Delinquency__c</columns>
    <columns>Delinquency_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>